Use Java8 style URL encoding for backwards compatibility.